--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": ""
+    "url": "https://github.com/Alex1100/real-estate-finance"
   },
   "keywords": [
     "Real Estate",
